--- a/interface/index.html
+++ b/interface/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>HeartBloom - Accueil</title>
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+    />
+    <link rel="stylesheet" href="CSS/inde.css" />
+    <link
+            href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
+            rel="stylesheet"
+    />
 </head>
 <body>
-    <h1>TEST FRONT</h1>
+<div class="container d-flex flex-column align-items-center justify-content-center min-vh-100 text-center">
+    <div class="logo-container mb-4">
+        <img src="logo.png" alt="HeartBloom Logo" class="logo-img mb-2" />
+        <h1 class="logo-text">HeartBloom</h1>
+    </div>
 
+    <div class="w-100 px-4" style="max-width: 320px;">
+        <a href="login.html" class="btn btn-primary custom-btn-1 w-100 mb-3">Se connecter</a>
+        <a href="signup.html" class="btn custom-btn-2 w-100">S'inscrire</a>
+    </div>
+</div>
+
+=<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
