--- a/interface/models/login.html
+++ b/interface/models/login.html
@@ -12,7 +12,7 @@
             href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
             rel="stylesheet"
     />
-    <link rel="stylesheet" href="CSS/login.css" />
+    <link rel="stylesheet" href="../CSS/login.css" />
 </head>
 <body>
 <div class="container d-flex flex-column align-items-center justify-content-center min-vh-100 text-center px-3">
