--- a/interface/models/users.html
+++ b/interface/models/users.html
@@ -9,6 +9,6 @@
 <h1>Interface API</h1>
 <button id="loadBtn">Charger les données</button>
 <div id="result"></div>
-<script type="module" src="js/app.js"></script>
+<script type="module" src="../js/app.js"></script>
 </body>
 </html>
