--- a/interface/index.html
+++ b/interface/index.html
@@ -8,10 +8,13 @@
                 href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
                 rel="stylesheet"
         />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+
         <link rel="stylesheet" href="./CSS/login.css" />
+
     </head>
     <body>
-        <header>
+        <header id="navbar">
 
         </header>
         <main id="app">
