navbaradmin_modifadmin_createadmin_listeusers_deleteuser

--- a/interface/index.html
+++ b/interface/index.html
@@ -18,9 +18,12 @@
 
     </head>
     <body>
-        <header id="navbar">
+        <div id="navbar">
 
-        </header>
+        </div>
+        <div id="navBarAdmin">
+
+        </div>
         <main id="app">
         </main>
 
